Fix: Resolve Template file not found error